--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <li><a href="#janabhiprayam">ജനാഭിപ്രായം </a></li>
                         <li><a href="#mulearn">മ്യു ലേൺ ഓണം </a></li>
                        
-						<li><a href="contact.html">സമ്പർക്കം </a></li>
+						<li><a href="#contact">സമ്പർക്കം </a></li>
                     </ul>
                 </div>
             </div>
