--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item "><a class="nav-link active" href="index.html">മുഖവുര</a></li>
+                        <li class="nav-item "><a class="nav-link" href="#">മുഖവുര</a></li>
                         <li class="nav-item "><a class="nav-link" href="#about">നമ്മെക്കുറിച്</a></li>
                         
                        
@@ -470,7 +470,7 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-left">                   
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Maveli</a> Design By : Maveli
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2021 <a href="#">Maveli</a> Design By : Maveli
 					</p>
                 </div>
 
