--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 									<h2>ഓണാഘോഷം കൊണ്ടു വന്ന നാടുവാഴി <br> <br>ജനങ്ങളുടെ രാജാവ്  </h2>
 									<div class="slider-content-btn">
 										<a class="btn11" href="https://en.wikipedia.org/wiki/Mahabali">കൂടുതൽ വിവരങ്ങൾ <div class="transition"></div></a>
-										<a class="btn11" href="">സമ്പർക്കത്തിന് <div class="transition"></div></a>
+										<a class="btn11" href="#contact">സമ്പർക്കത്തിന് <div class="transition"></div></a>
+                                        <br><br>
+<a class="btn11" href="index-en.html"> ഇംഗ്ലീഷ്ൽ തുടരുക <div class = "transition"> </div> </a>
+
 									</div>
 								</div>
 							</div>
@@ -390,13 +393,13 @@
 					</div>
                     
 				</div>
-                <ul class="social-list">
+                <!-- <ul class="social-list">
                     <li><a href="https://www.facebook.com/" class="facebook"><i class="fa fa-facebook"></i></a></li>
                     <li><a href="https://twitter.com/" class="twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://linkedin.com/" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://www.instagram.com/" class="instagram"><i class="fa fa-instagram"></i></a></li>
                     <li><a href="https://plus.google.com/" class="googlePlus"><i class="fa fa-google-plus"></i></a></li>
-                </ul>
+                </ul> -->
 			</div>  
 			
         </div>  
